--- a/app/src/main/res/layout/content_add.xml
+++ b/app/src/main/res/layout/content_add.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="100dp"
-    tools:context=".activities.AddActivity">
+    tools:context=".activities.AddNoteActivity">
 
     <EditText
         android:id="@+id/itemName"
