--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.AddActivity">
+    tools:context=".activities.AddNoteActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
