--- a/app/src/main/res/drawable/recycler_view_fast_scroller__handle.xml
+++ b/app/src/main/res/drawable/recycler_view_fast_scroller__handle.xml
@@ -6,7 +6,7 @@
 
             <corners android:radius="2dp"/>
 
-            <solid android:color="#FF0288D1"/>
+            <solid android:color="#00796b"/>
 
             <size
                 android:height="32dp"
