--- a/app/src/main/res/drawable/recycler_view_fast_scroller__bubble.xml
+++ b/app/src/main/res/drawable/recycler_view_fast_scroller__bubble.xml
@@ -8,7 +8,7 @@
         android:bottomLeftRadius="44dp"
         android:bottomRightRadius="0px"/>
 
-    <solid android:color="#FF0288D1"/>
+    <solid android:color="#00796b"/>
     <size
         android:height="88dp"
         android:width="88dp"/>
