--- a/app/src/main/res/layout/activity_cotact_list.xml
+++ b/app/src/main/res/layout/activity_cotact_list.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
+    tools:context=".activities.ContactListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
