--- a/app/src/main/res/layout/row_contact.xml
+++ b/app/src/main/res/layout/row_contact.xml
@@ -45,6 +45,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/text_view_contact_phone_number"
                 android:maxLines="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
