--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,18 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".activities.MainActivity">
+      tools:context=".activities.ContactListActivity">
 
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_white_24dp"
         android:title=""
         app:showAsAction="always"/>
-
-    <item
-        android:id="@+id/action_add_contact"
-        android:icon="@drawable/ic_person_add_white_24dp"
-        android:title=""
-        app:showAsAction="always"/>
-
 </menu>
