--- a/app/src/main/res/layout/content_add.xml
+++ b/app/src/main/res/layout/content_add.xml
@@ -3,26 +3,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:paddingTop="100dp"
     tools:context=".activities.AddNoteActivity">
+
+    <TextView
+        android:id="@+id/display_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+       android:textColor="@color/primary_dark"
+        android:textAllCaps="true"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/pickContactBtn"
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:text="Pick Contact2" />
+        android:text="Pick Contact" />
     <EditText
         android:id="@+id/itemName"
+        android:inputType="phone"
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:hint="@string/item_name" />
+        android:padding="10dp"
+        android:hint="@string/item_name"
+        android:background="@drawable/textinputborder"/>
 
-    <EditText
-        android:id="@+id/personName"
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/person_name" />
+        app:counterEnabled="true"
+        app:counterMaxLength="200">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/personName"
+            android:layout_width="match_parent"
+            android:padding="10dp"
+            android:gravity="top"
+            android:imeOptions="actionDone"
+            android:layout_height="wrap_content"
+            android:minLines="4"
+            android:background="@drawable/textinputborder" />
+
+    </android.support.design.widget.TextInputLayout>
+
 
     <Button
         android:id="@+id/dateButton"
@@ -30,7 +62,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/set_date" />
-
-
 
 </LinearLayout>
