--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,7 +27,7 @@
         <ImageView
             android:id="@+id/content_hamburger"
             style="@style/ImageView.Hamburger"
-            android:src="@drawable/ic_menu_90" />
+            android:src="@drawable/ic_menu" />
 
         <com.bluerocket.callernotse.widget.CanaroTextView
             android:layout_width="wrap_content"
