--- a/app/src/main/res/layout/guillotine.xml
+++ b/app/src/main/res/layout/guillotine.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:id="@+id/guillotine_hamburger"
             style="@style/ImageView.Hamburger"
-            android:src="@drawable/ic_menu" />
+            android:src="@drawable/ic_menu_90" />
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
