--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="100dp"
-    tools:context=".activities.AddNoteActivity">
+    tools:context=".activities.HomeActivity">
 
     <TextView
         android:id="@+id/display_name"
@@ -62,5 +62,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/set_date" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_cancel_white_24dp"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="bottom|center"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:visibility="visible"/>
 
 </LinearLayout>
