--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -254,5 +254,9 @@
 
     <style name="Theme_Dark" parent="@style/Theme_Dark_Base"/>
 
+    <style name="PackageNameFont" parent="@android:style/TextAppearance.Small">
+        <item name="android:textColor">#000000</item>
+    </style>
+
 
 </resources>
